--- a/source/index.html
+++ b/source/index.html
@@ -93,8 +93,8 @@
             <p class="avatar-label">Oh and by the way, this is what I look like:</p>
 
             <picture class="avatar">
-                <source srcset="static/images/avatar.webp" type="image/webp">
-                <img class="avatar" src="static/images/avatar.png" alt="Arnelle Balane">
+                <source srcset="<%= require('./images/avatar.webp') %>" type="image/webp">
+                <img class="avatar" src="<%= require('./images/avatar.png') %>" alt="Arnelle Balane">
             </picture>
         </div>
     </body>
