--- a/source/index.html
+++ b/source/index.html
@@ -3,6 +3,24 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="theme-color" content="#ffeb3b">
+        <meta name="description" content="Personal website of Arnelle Balane">
+
+        <meta property="fb:app_id" content="">
+        <meta property="og:title" content="Arnelle Balane" itemprop="name">
+        <meta property="og:description" content="Just another Web developer's personal website." itemprop="description">
+        <meta property="og:image" content="https://arnellebalane.com<%= require('./images/icon-200.png') %>">
+        <meta property="og:url" content="https://arnellebalane.com/">
+        <meta property="og:type" content="website">
+
+        <meta name="twitter:card" content="summary">
+        <meta name="twitter:site" content="@arnellebalane">
+        <meta name="twitter:title" content="Arnelle Balane">
+        <meta name="twitter:description" content="Just another Web developer's personal website.">
+        <meta name="twitter:image" content="https://arnellebalane.com<%= require('./images/icon-200.png') %>">
+        <meta name="twitter:image:alt" content="Arnelle Balane">
+
+        <link itemprop="image" href="https://arnellebalane.com<%= require('./images/icon-200.png') %>">
 
         <title>Arnelle Balane</title>
     </head>
