load favicon in index.html template

--- a/source/index.html
+++ b/source/index.html
@@ -21,6 +21,7 @@
         <meta name="twitter:image:alt" content="Arnelle Balane">
 
         <link itemprop="image" href="https://arnellebalane.com<%= require('./images/icon-200.png') %>">
+        <link rel="icon" href="<%= require('./images/icon-16.png') %>">
 
         <title>Arnelle Balane</title>
     </head>
