add critical css to html template

--- a/source/index.html
+++ b/source/index.html
@@ -24,6 +24,29 @@
         <link rel="icon" href="<%= require('./images/icon-16.png') %>">
 
         <title>Arnelle Balane</title>
+
+        <style>
+            html {
+                font-size: 62.5%;
+            }
+
+            body {
+                border: 1rem solid #ffeb3b;
+                margin: 0;
+                font-family: sans-serif;
+                font-size: 1.6rem;
+            }
+
+            .wrapper {
+                width: calc(100vw - 6rem);
+                max-width: 60rem;
+                margin: 0 auto;
+            }
+
+            .site-header {
+                text-align: center;
+            }
+        </style>
     </head>
 
     <body>
