--- a/source/index.html
+++ b/source/index.html
@@ -26,6 +26,32 @@
         <title>Arnelle Balane</title>
 
         <style>
+            @font-face {
+                font-family: "Luna";
+                src: local("Luna"),
+                    url("fonts/Luna.subset.woff") format("woff");
+                font-display: swap;
+                unicode-range: U+0041, U+0042, U+0061, U+0065 U+006C, U+006E, U+0072;
+            }
+
+            @font-face {
+                font-family: "Open Sans";
+                font-weight: 300;
+                src: local("Open Sans Light"),
+                    url("fonts/OpenSansLight.subset.woff") format("woff");
+                font-display: fallback;
+                unicode-range: U+0021-007E;
+            }
+
+            @font-face {
+                font-family: "Open Sans";
+                font-weight: 400;
+                src: local("Open Sans"),
+                    url("fonts/OpenSansRegular.subset.woff") format("woff");
+                font-display: fallback;
+                unicode-range: U+0021-007E;
+            }
+
             html {
                 font-size: 62.5%;
             }
