--- a/source/index.html
+++ b/source/index.html
@@ -30,7 +30,7 @@
                 font-family: "Luna";
                 src: local("Luna"),
                     url("<%= require('./fonts/Luna.subset.woff') %>") format("woff");
-                font-display: swap;
+                font-display: block;
                 unicode-range: U+0041, U+0042, U+0061, U+0065 U+006C, U+006E, U+0072;
             }
 
@@ -39,7 +39,7 @@
                 font-weight: 300;
                 src: local("Open Sans Light"),
                     url("<%= require('./fonts/OpenSansLight.subset.woff') %>") format("woff");
-                font-display: fallback;
+                font-display: block;
                 unicode-range: U+0021-007E;
             }
 
@@ -48,7 +48,7 @@
                 font-weight: 400;
                 src: local("Open Sans"),
                     url("<%= require('./fonts/OpenSansRegular.subset.woff') %>") format("woff");
-                font-display: fallback;
+                font-display: block;
                 unicode-range: U+0021-007E;
             }
 
