pass base url to template via webpack instead of hardcoded

--- a/source/index.html
+++ b/source/index.html
@@ -9,18 +9,18 @@
         <meta property="fb:app_id" content="">
         <meta property="og:title" content="Arnelle Balane" itemprop="name">
         <meta property="og:description" content="Just another Web developer's personal website." itemprop="description">
-        <meta property="og:image" content="https://arnellebalane.com<%= require('./images/icon-200.png') %>">
-        <meta property="og:url" content="https://arnellebalane.com/">
+        <meta property="og:image" content="<%= htmlWebpackPlugin.options.baseUrl %><%= require('./images/icon-200.png') %>">
+        <meta property="og:url" content="<%= htmlWebpackPlugin.options.baseUrl %>">
         <meta property="og:type" content="website">
 
         <meta name="twitter:card" content="summary">
         <meta name="twitter:site" content="@arnellebalane">
         <meta name="twitter:title" content="Arnelle Balane">
         <meta name="twitter:description" content="Just another Web developer's personal website.">
-        <meta name="twitter:image" content="https://arnellebalane.com<%= require('./images/icon-200.png') %>">
+        <meta name="twitter:image" content="<%= htmlWebpackPlugin.options.baseUrl %><%= require('./images/icon-200.png') %>">
         <meta name="twitter:image:alt" content="Arnelle Balane">
 
-        <link itemprop="image" href="https://arnellebalane.com<%= require('./images/icon-200.png') %>">
+        <link itemprop="image" href="<%= htmlWebpackPlugin.options.baseUrl %><%= require('./images/icon-200.png') %>">
         <link rel="icon" href="<%= require('./images/icon-16.png') %>">
 
         <title>Arnelle Balane</title>
