--- a/source/index.html
+++ b/source/index.html
@@ -1,7 +1,9 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" amp>
     <head>
         <meta charset="utf-8">
+        <script async src="https://cdn.ampproject.org/v0.js"></script>
+
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffeb3b">
         <meta name="description" content="Personal website of Arnelle Balane">
@@ -20,11 +22,13 @@
         <meta name="twitter:image" content="<%= htmlWebpackPlugin.options.baseUrl %><%= require('./images/icon-200.png') %>">
         <meta name="twitter:image:alt" content="Arnelle Balane">
 
+        <link rel="canonical" href="<%= htmlWebpackPlugin.options.baseUrl %>">
         <link itemprop="image" href="<%= htmlWebpackPlugin.options.baseUrl %><%= require('./images/icon-200.png') %>">
         <link rel="icon" href="<%= require('./images/icon-16.png') %>">
 
         <title>Arnelle Balane</title>
 
+        <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
         <style>
             @font-face {
                 font-family: "Luna";
