--- a/source/index.html
+++ b/source/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <script async src="https://cdn.ampproject.org/v0.js"></script>
+        <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffeb3b">
