fix usage of amp-install-serviceworker component

--- a/source/index.html
+++ b/source/index.html
@@ -183,7 +183,7 @@
                 <amp-img fallback src="<%= require('./images/avatar.png') =>" alt="Arnelle's Avatar" width="80" height="80" class="avatar"></amp-img>
             </amp-img>
 
-            <amp-install-serviceworker src="<%= htmlWebpackPlugin.options.baseUrl %>/sw.js"></amp-install-serviceworker>
+            <amp-install-serviceworker src="sw.js" layout="nodisplay"></amp-install-serviceworker>
         </div>
     </body>
 </html>
