add minimum-scale setting in viewport metatag

--- a/source/index.html
+++ b/source/index.html
@@ -6,7 +6,7 @@
         <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
         <script async custom-element="amp-install-serviceworker" src="https://cdn.ampproject.org/v0/amp-install-serviceworker-0.1.js"></script>
 
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
         <meta name="theme-color" content="#ffeb3b">
         <meta name="description" content="Personal website of Arnelle Balane">
 
