combine redundant class attibute on anchor elements

--- a/source/index.html
+++ b/source/index.html
@@ -112,7 +112,7 @@
 
                 <% _.forEach(projects, function(project) { %>
                 <li>
-                    <a href="<%= project.url %>" class="project github" target="_blank" rel="noopener noreferrer" class="github-link">
+                    <a href="<%= project.url %>" class="project github github-link" target="_blank" rel="noopener noreferrer">
                         <p class="name"><%= project.name %></p>
 
                         <% if (project.description) { %>
