--- a/source/index.html
+++ b/source/index.html
@@ -79,6 +79,253 @@
                 text-align: center;
             }
         </style>
+        <style amp-custom>
+            *,
+            *::before,
+            *::after {
+                box-sizing: border-box;
+                margin: 0;
+            }
+
+            html {
+                --primary-color: #ffeb3b;
+
+                font-size: 62.5%;
+            }
+
+            body {
+                min-height: 100vh;
+                border: 1rem solid var(--primary-color);
+                font-family: "Open Sans", sans-serif;
+                font-size: 1.6rem;
+                -webkit-font-smoothing: antialiased;
+                color: #333;
+            }
+
+            a,
+            input,
+            button {
+                font: inherit;
+                color: inherit;
+            }
+
+            p:not(:first-of-type) {
+                margin-top: 1.5em;
+            }
+
+            p:not(:last-of-type) {
+                margin-bottom: 1.5em;
+            }
+
+            p a {
+                text-decoration: none;
+                text-shadow: 1px 1px 0 var(--primary-color);
+            }
+
+            p a:hover,
+            p a:focus {
+                position: relative;
+                background-color: var(--primary-color);
+            }
+
+            p strong {
+                color: #666;
+            }
+
+            .wrapper {
+                width: calc(100vw - 6rem);
+                max-width: 60rem;
+                padding-bottom: 8rem;
+                margin: 0 auto;
+            }
+
+            .separator {
+                height: 1.6em;
+            }
+
+            .hidden {
+                display: none !important;
+            }
+
+
+            /** Header **/
+
+            .site-header {
+                padding: 8rem 0;
+                text-align: center;
+            }
+
+            .site-header p {
+                margin: 0;
+            }
+
+            .title {
+                margin: 2rem 0 1rem 0;
+                font-family: "Luna", sans-serif;
+                font-size: 2.4em;
+                font-weight: 400;
+            }
+
+            @media all and (max-width: 500px) {
+                .title {
+                    font-size: 1.6em;
+                }
+            }
+
+
+            /** Projects **/
+
+            .projects {
+                padding: 0 4rem;
+                margin: 1rem 0;
+                list-style: none;
+            }
+
+            .projects li {
+                margin: 1rem 0;
+            }
+
+            .project {
+                display: inline-block;
+                padding-left: 4rem;
+                position: relative;
+                text-decoration: none;
+            }
+
+            .project::before {
+                content: "";
+                width: 3.2rem;
+                height: 3.2rem;
+                position: absolute;
+                top: calc(50% - 3.2rem / 2);
+                left: 0;
+                background: url("images/sprites.png") no-repeat;
+                opacity: 0.25;
+            }
+
+            .project.github::before {
+                background-position: 0 0;
+            }
+
+            .project.codepen::before {
+                background-position: -3.2rem 0;
+            }
+
+            .project p {
+                margin: 0;
+            }
+
+            .project p:only-child {
+                margin: calc((4rem - 1.375em) / 2) 0;
+            }
+
+            .project .description {
+                font-size: 0.8em;
+            }
+
+            .project:hover .name,
+            .project:focus .name {
+                display: inline-block;
+                background-color: var(--primary-color);
+            }
+
+            @media all and (max-width: 500px) {
+                .projects {
+                    padding: 0;
+                }
+            }
+
+
+            /** Blog **/
+
+            .subscribed a {
+                text-shadow: none;
+                color: #aaa;
+            }
+
+            .subscribed a:hover,
+            .subscribed a:focus {
+                background-color: #eee;
+            }
+
+            blockquote {
+                padding: 0 4rem;
+                margin: 1rem 0;
+                text-align: center;
+            }
+
+            blockquote a {
+                position: relative;
+                font-size: 1.6em;
+                font-weight: 300;
+                text-decoration: none;
+            }
+
+            blockquote a:hover,
+            blockquote a:focus {
+                background-color: var(--primary-color);
+            }
+
+            blockquote a::before,
+            blockquote a::after {
+                margin: 0 0.5rem;
+                position: absolute;
+                font-family: serif;
+                font-size: 1.25em;
+                opacity: 0.25;
+            }
+
+            blockquote a::before {
+                content: "“";
+                right: 100%;
+            }
+
+            blockquote a::after {
+                content: "”";
+                left: 100%;
+            }
+
+            blockquote time {
+                display: block;
+                margin-top: 0.75em;
+                font-size: 0.8em;
+            }
+
+            @media all and (max-width: 500px) {
+                blockquote {
+                    padding: 0;
+                }
+            }
+
+
+            /** Talk **/
+
+            .no-upcoming-talk {
+                padding: 0 8rem 0 4rem;
+                font-size: 0.8em;
+            }
+
+            @media all and (max-width: 500px) {
+                .no-upcoming-talk {
+                    padding: 0;
+                }
+            }
+
+
+            /** Avatar **/
+
+            .avatar-label {
+                text-align: center;
+            }
+
+            .avatar {
+                display: block;
+                width: 8rem;
+                height: 8rem;
+                margin: 2.4rem auto 0 auto;
+                border-radius: 50%;
+            }
+        </style>
     </head>
 
     <body>
