--- a/source/index.html
+++ b/source/index.html
@@ -143,7 +143,7 @@
             }
 
             .hidden {
-                display: none !important;
+                display: none;
             }
 
 
