--- a/source/index.html
+++ b/source/index.html
@@ -198,7 +198,7 @@
                 position: absolute;
                 top: calc(50% - 3.2rem / 2);
                 left: 0;
-                background: url("images/sprites.png") no-repeat;
+                background: url("<%= require('./images/sprites.png') %>") no-repeat;
                 opacity: 0.25;
             }
 
