update avatar image

--- a/source/index.html
+++ b/source/index.html
@@ -426,7 +426,7 @@
             <p class="avatar-label">Oh and by the way, this is what I look like:</p>
 
             <amp-img src="<%= require('./images/avatar.webp') %>" alt="Arnelle's Avatar" width="80" height="80" class="avatar">
-                <amp-img fallback src="<%= require('./images/avatar.png') =>" alt="Arnelle's Avatar" width="80" height="80" class="avatar"></amp-img>
+                <amp-img fallback src="<%= require('./images/avatar.jpg') =>" alt="Arnelle's Avatar" width="80" height="80" class="avatar"></amp-img>
             </amp-img>
 
             <amp-install-serviceworker src="sw.js" layout="nodisplay"></amp-install-serviceworker>
