undo ampifying the page

--- a/source/index.html
+++ b/source/index.html
@@ -1,16 +1,11 @@
 <!doctype html>
-<html lang="en" amp>
+<html lang="en">
     <head>
         <meta charset="utf-8">
-        <script async src="https://cdn.ampproject.org/v0.js"></script>
-        <script async custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
-        <script async custom-element="amp-install-serviceworker" src="https://cdn.ampproject.org/v0/amp-install-serviceworker-0.1.js"></script>
-
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
         <meta name="theme-color" content="#ffeb3b">
         <meta name="description" content="Personal website of Arnelle Balane">
 
-        <meta property="fb:app_id" content="">
         <meta property="og:title" content="Arnelle Balane" itemprop="name">
         <meta property="og:description" content="Just another Web developer's personal website." itemprop="description">
         <meta property="og:image" content="<%= htmlWebpackPlugin.options.baseUrl %><%= require('./images/icon-200.png') %>">
@@ -29,302 +24,6 @@
         <link rel="icon" href="<%= require('./images/icon-16.png') %>">
 
         <title>Arnelle Balane</title>
-
-        <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
-        <style amp-custom>
-            @font-face {
-                font-family: "Luna";
-                src: local("Luna"),
-                    url("<%= require('./fonts/Luna.subset.woff') %>") format("woff");
-                font-display: block;
-                unicode-range: U+0041, U+0042, U+0061, U+0065 U+006C, U+006E, U+0072;
-            }
-
-            @font-face {
-                font-family: "Open Sans";
-                font-weight: 300;
-                src: local("Open Sans Light"),
-                    url("<%= require('./fonts/OpenSansLight.subset.woff') %>") format("woff");
-                font-display: block;
-                unicode-range: U+0021-007E;
-            }
-
-            @font-face {
-                font-family: "Open Sans";
-                font-weight: 400;
-                src: local("Open Sans"),
-                    url("<%= require('./fonts/OpenSansRegular.subset.woff') %>") format("woff");
-                font-display: block;
-                unicode-range: U+0021-007E;
-            }
-
-            html {
-                font-size: 62.5%;
-            }
-
-            body {
-                border: 1rem solid #ffeb3b;
-                margin: 0;
-                font-family: sans-serif;
-                font-size: 1.6rem;
-            }
-
-            .wrapper {
-                width: calc(100vw - 6rem);
-                max-width: 60rem;
-                margin: 0 auto;
-            }
-
-            .site-header {
-                text-align: center;
-            }
-
-            *,
-            *::before,
-            *::after {
-                box-sizing: border-box;
-                margin: 0;
-            }
-
-            html {
-                --primary-color: #ffeb3b;
-
-                font-size: 62.5%;
-            }
-
-            body {
-                min-height: 100vh;
-                border: 1rem solid var(--primary-color);
-                font-family: "Open Sans", sans-serif;
-                font-size: 1.6rem;
-                -webkit-font-smoothing: antialiased;
-                color: #333;
-            }
-
-            a,
-            input,
-            button {
-                font: inherit;
-                color: inherit;
-            }
-
-            p:not(:first-of-type) {
-                margin-top: 1.5em;
-            }
-
-            p:not(:last-of-type) {
-                margin-bottom: 1.5em;
-            }
-
-            p a {
-                text-decoration: none;
-                text-shadow: 1px 1px 0 var(--primary-color);
-            }
-
-            p a:hover,
-            p a:focus {
-                position: relative;
-                background-color: var(--primary-color);
-            }
-
-            p strong {
-                color: #666;
-            }
-
-            .wrapper {
-                width: calc(100vw - 6rem);
-                max-width: 60rem;
-                padding-bottom: 8rem;
-                margin: 0 auto;
-            }
-
-            .separator {
-                height: 1.6em;
-            }
-
-            .hidden {
-                display: none;
-            }
-
-
-            /** Header **/
-
-            .site-header {
-                padding: 8rem 0;
-                text-align: center;
-            }
-
-            .site-header p {
-                margin: 0;
-            }
-
-            .title {
-                margin: 2rem 0 1rem 0;
-                font-family: "Luna", sans-serif;
-                font-size: 2.4em;
-                font-weight: 400;
-            }
-
-            @media all and (max-width: 500px) {
-                .title {
-                    font-size: 1.6em;
-                }
-            }
-
-
-            /** Projects **/
-
-            .projects {
-                padding: 0 4rem;
-                margin: 1rem 0;
-                list-style: none;
-            }
-
-            .projects li {
-                margin: 1rem 0;
-            }
-
-            .project {
-                display: inline-block;
-                padding-left: 4rem;
-                position: relative;
-                text-decoration: none;
-            }
-
-            .project::before {
-                content: "";
-                width: 3.2rem;
-                height: 3.2rem;
-                position: absolute;
-                top: calc(50% - 3.2rem / 2);
-                left: 0;
-                background: url("<%= require('./images/sprites.png') %>") no-repeat;
-                opacity: 0.25;
-            }
-
-            .project.github::before {
-                background-position: 0 0;
-            }
-
-            .project.codepen::before {
-                background-position: -3.2rem 0;
-            }
-
-            .project p {
-                margin: 0;
-            }
-
-            .project p:only-child {
-                margin: calc((4rem - 1.375em) / 2) 0;
-            }
-
-            .project .description {
-                font-size: 0.8em;
-            }
-
-            .project:hover .name,
-            .project:focus .name {
-                display: inline-block;
-                background-color: var(--primary-color);
-            }
-
-            @media all and (max-width: 500px) {
-                .projects {
-                    padding: 0;
-                }
-            }
-
-
-            /** Blog **/
-
-            .subscribed a {
-                text-shadow: none;
-                color: #aaa;
-            }
-
-            .subscribed a:hover,
-            .subscribed a:focus {
-                background-color: #eee;
-            }
-
-            blockquote {
-                padding: 0 4rem;
-                margin: 1rem 0;
-                text-align: center;
-            }
-
-            blockquote a {
-                position: relative;
-                font-size: 1.6em;
-                font-weight: 300;
-                text-decoration: none;
-            }
-
-            blockquote a:hover,
-            blockquote a:focus {
-                background-color: var(--primary-color);
-            }
-
-            blockquote a::before,
-            blockquote a::after {
-                margin: 0 0.5rem;
-                position: absolute;
-                font-family: serif;
-                font-size: 1.25em;
-                opacity: 0.25;
-            }
-
-            blockquote a::before {
-                content: "“";
-                right: 100%;
-            }
-
-            blockquote a::after {
-                content: "”";
-                left: 100%;
-            }
-
-            blockquote time {
-                display: block;
-                margin-top: 0.75em;
-                font-size: 0.8em;
-            }
-
-            @media all and (max-width: 500px) {
-                blockquote {
-                    padding: 0;
-                }
-            }
-
-
-            /** Talk **/
-
-            .no-upcoming-talk {
-                padding: 0 8rem 0 4rem;
-                font-size: 0.8em;
-            }
-
-            @media all and (max-width: 500px) {
-                .no-upcoming-talk {
-                    padding: 0;
-                }
-            }
-
-
-            /** Avatar **/
-
-            .avatar-label {
-                text-align: center;
-            }
-
-            .avatar {
-                display: block;
-                width: 8rem;
-                height: 8rem;
-                margin: 2.4rem auto 0 auto;
-                border-radius: 50%;
-            }
-        </style>
     </head>
 
     <body>
@@ -425,11 +124,10 @@
 
             <p class="avatar-label">Oh and by the way, this is what I look like:</p>
 
-            <amp-img src="<%= require('./images/avatar.webp') %>" alt="Arnelle's Avatar" width="80" height="80" class="avatar">
-                <amp-img fallback src="<%= require('./images/avatar.jpg') =>" alt="Arnelle's Avatar" width="80" height="80" class="avatar"></amp-img>
-            </amp-img>
-
-            <amp-install-serviceworker src="sw.js" layout="nodisplay"></amp-install-serviceworker>
+            <picture class="avatar">
+                <source srcset="<%= require('./images/avatar.webp') %>" type="image/webp">
+                <img class="avatar" src="<%= require('./images/avatar.jpg') %>" alt="Arnelle Balane">
+            </picture>
         </div>
     </body>
 </html>
