--- a/source/index.html
+++ b/source/index.html
@@ -32,6 +32,8 @@
                 <p>Hello, my name is</p>
                 <h1 class="title">Arnelle Balane</h1>
                 <p>I'm just another Web Developer</p>
+
+                <button class="toggle-theme"></button>
             </header>
 
             <p>
