--- a/source/index.html
+++ b/source/index.html
@@ -33,7 +33,7 @@
                 <h1 class="title">Arnelle Balane</h1>
                 <p>I'm just another Web Developer</p>
 
-                <button class="toggle-theme"></button>
+                <button name="toggle-theme" class="toggle-theme"></button>
             </header>
 
             <p>
