Use baseUrl set through templateOptions in html template

--- a/source/index.html
+++ b/source/index.html
@@ -8,13 +8,13 @@
 
         <meta property="og:title" content="@arnellebalane">
         <meta property="og:description" content="Arnelle's personal website- articles, projects, events.">
-        <meta property="og:url" content="https://arnellebalane.com/">
+        <meta property="og:url" content="<%= baseUrl %>">
         <meta property="og:type" content="website">
         <meta name="twitter:card" content="summary">
         <meta name="twitter:site" content="@arnellebalane">
 
         <link rel="canonical" href="https://arnellebalane.com/">
-        <link rel="icon" href="https://arnellebalane.com/<%= require('./images/favicons/32x32.png') %>">
+        <link rel="icon" href="<%= baseUrl %><%= require('./images/favicons/32x32.png') %>">
 
         <title>@arnellebalane</title>
     </head>
