Use baseUrl variable for canonical url in html template

--- a/source/index.html
+++ b/source/index.html
@@ -13,7 +13,7 @@
         <meta name="twitter:card" content="summary">
         <meta name="twitter:site" content="@arnellebalane">
 
-        <link rel="canonical" href="https://arnellebalane.com/">
+        <link rel="canonical" href="<%= baseUrl %>">
         <link rel="icon" href="<%= baseUrl %><%= require('./images/favicons/32x32.png') %>">
 
         <title>@arnellebalane</title>
